# E.V.A.

./: .env.example  README.md  test-tools.sh
eva-daemon/: Cargo.toml
eva-daemon/src/: main.rs
eva-daemon/src/ai/: llama.rs  mod.rs
eva-daemon/src/audio/: capture.rs  mod.rs  wakeword.rs
eva-daemon/src/tools/: clipboard.rs  consent.rs  file_ops.rs  mod.rs  notifications.rs  screen.rs  system_control.rs  web_search.rs
eva-ui/: test.html
scripts/: download-models.sh  setup-ollama.sh
