[package]
name = "eva-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

# AI Models
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"

# Audio (for future wake word + STT)
cpal = "0.15"
hound = "3.5"